force-app/main/default/objects/Quote/fields/AprobacionCliente__c.field-meta.xml
<CustomField>
    <fullName>AprobacionCliente__c</fullName>
    <description>Estatus de la aprobación</description>
    <label>Aprobación cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>