force-app/main/default/objects/Quote/fields/Cedis__c.field-meta.xml
<CustomField>
    <fullName>Cedis__c</fullName>
    <formula>Opportunity.Cedis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cedis</label>
    <type>Text</type>
</CustomField>