force-app/main/default/objects/Quote/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presupuestos</relationshipLabel>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>