force-app/main/default/objects/Quote/fields/Descuento_por_folio_o_promoci_n__c.field-meta.xml
<CustomField>
    <fullName>Descuento_por_folio_o_promoci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descuento por folio o promoción</label>
    <type>Checkbox</type>
</CustomField>