force-app/main/default/objects/Quote/fields/Detalle_de_la_Solicitud_de_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_la_Solicitud_de_Aprobaci_n__c</fullName>
    <label>Detalle de la Solicitud de Aprobación</label>
    <type>TextArea</type>
</CustomField>