force-app/main/default/objects/Quote/fields/Detalle_Solicitud_de_Autorizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Solicitud_de_Autorizaci_n__c</fullName>
    <label>Detalle Solicitud de Autorización</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>