force-app/main/default/objects/Quote/fields/EnlacePortal__c.field-meta.xml
<CustomField>
    <fullName>EnlacePortal__c</fullName>
    <description>Contiene el enlace del portal</description>
    <formula>IF(GenerarLink__c=TRUE,
HYPERLINK(&quot;https://imperquimiacotizaciones.secure.force.com/AprobarCotizacion?id=&quot;+Id,&quot;https://imperquimiacotizaciones.secure.force.com/AprobarCotizacion?id=&quot;+Id,&quot;_blank&quot;),
&quot; &quot;  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enlace portal clientes</label>
    <type>Text</type>
</CustomField>