force-app/main/default/objects/Quote/fields/Folio_o_Promoci_n__c.field-meta.xml
<CustomField>
    <fullName>Folio_o_Promoci_n__c</fullName>
    <inlineHelpText>Núm. del folio aprobado o Nombre de la promoción</inlineHelpText>
    <label>Folio o Promoción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>