force-app/main/default/objects/Quote/fields/GenerarLink__c.field-meta.xml
<CustomField>
    <fullName>GenerarLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define si se puede generar link del portal</description>
    <label>Generar link portal</label>
    <type>Checkbox</type>
</CustomField>