force-app/main/default/objects/Quote/fields/Propietario_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_la_Oportunidad__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp;&quot; &quot;&amp; Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario de la Oportunidad</label>
    <type>Text</type>
</CustomField>