force-app/main/default/objects/Quote/fields/Requiereaprobacion__c.field-meta.xml
<CustomField>
    <fullName>Requiereaprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se marcará cuando la cotización tenga  al menos un descuento en alguno de sus productos.</description>
    <label>¿Requiere aprobación?</label>
    <type>Checkbox</type>
</CustomField>