force-app/main/default/objects/Quote/fields/Tipo_de_Convenio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Convenio__c</fullName>
    <formula>TEXT(Opportunity.Tipo_de_convenio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Convenio</label>
    <type>Text</type>
</CustomField>