force-app/main/default/objects/Quote/fields/Tipo_de_registro_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro_Oportunidad__c</fullName>
    <formula>Opportunity.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro Oportunidad</label>
    <type>Text</type>
</CustomField>