force-app/main/default/objects/Quote/fields/TotalPartidas__c.field-meta.xml
<CustomField>
    <fullName>TotalPartidas__c</fullName>
    <label>Total</label>
    <summarizedField>QuoteLineItem.PrecioTotalConDescuentos__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>