force-app/main/default/objects/Quote/validationRules/Aprobacion_de_descuentos.validationRule-meta.xml
<ValidationRule>
    <fullName>Aprobacion_de_descuentos</fullName>
    <active>true</active>
    <description>Esta regla solicita la aprobación al momento de Sincronizar el presupuesto</description>
    <errorConditionFormula>IsSyncing =true &amp;&amp; Requiereaprobacion__c=True</errorConditionFormula>
    <errorMessage>Su Cotización contiene descuentos adicionales los cuales deben enviarse a aprobación , consulte con su administrador para mas información</errorMessage>
</ValidationRule>